@@ -54,7 +54,8 @@
 
         <div class="visualClear" ></div>
         <div id="tabbedview-body" class="panes">
-            <dl class="actionMenu tabbedview-tab-menu">
+            <dl class="actionMenu tabbedview-tab-menu"
+                tal:condition="view/user_is_logged_in">
                 <dt class="actionMenuHeader">
                     <a href="#">
                         <span>⚙</span>
